# mrwhisker

./: README.md  pyproject.toml
mrwhisker/: algo.md  main.py
tests/: spec_parser.py  test.html  test_comments.py  test_delimiters.py  test_interpolation.py  test_inverted.py  test_partials.py  test_render.py  test_sections.py  test_tokens.py
tests/variables/: test_variable.py
