[tool.poetry]
name = "mrwhisker"
version = "0.1.0"
description = ""
authors = ["josiah <lowgen0@gmail.com>"]
readme = "README.md"
packages = [{ include = "mrwhisker" }]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
